[gd_scene load_steps=46 format=3 uid="uid://b4uyanguafauh"]

[ext_resource type="Script" uid="uid://bd7qm8bs4spr0" path="res://scripts/player.gd" id="1_merdl"]
[ext_resource type="Texture2D" uid="uid://bxnxx4gtp8x75" path="res://sprites/AnimationSheet_Character.png" id="2_b0kkn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u3f3p"]
height = 26.0

[sub_resource type="AtlasTexture" id="AtlasTexture_e4p34"]
atlas = ExtResource("2_b0kkn")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfe5m"]
atlas = ExtResource("2_b0kkn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qly61"]
atlas = ExtResource("2_b0kkn")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsoyl"]
atlas = ExtResource("2_b0kkn")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nm46"]
atlas = ExtResource("2_b0kkn")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i623q"]
atlas = ExtResource("2_b0kkn")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef06p"]
atlas = ExtResource("2_b0kkn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjdhl"]
atlas = ExtResource("2_b0kkn")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x08pd"]
atlas = ExtResource("2_b0kkn")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dchgp"]
atlas = ExtResource("2_b0kkn")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdgjc"]
atlas = ExtResource("2_b0kkn")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0i8f"]
atlas = ExtResource("2_b0kkn")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0i614"]
atlas = ExtResource("2_b0kkn")
region = Rect2(128, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprnr"]
atlas = ExtResource("2_b0kkn")
region = Rect2(160, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rie4"]
atlas = ExtResource("2_b0kkn")
region = Rect2(192, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp3pk"]
atlas = ExtResource("2_b0kkn")
region = Rect2(224, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgp7q"]
atlas = ExtResource("2_b0kkn")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n8aq"]
atlas = ExtResource("2_b0kkn")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_28s6d"]
atlas = ExtResource("2_b0kkn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cicqb"]
atlas = ExtResource("2_b0kkn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hj0ki"]
atlas = ExtResource("2_b0kkn")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fruft"]
atlas = ExtResource("2_b0kkn")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_slxql"]
atlas = ExtResource("2_b0kkn")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_evlff"]
atlas = ExtResource("2_b0kkn")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7db53"]
atlas = ExtResource("2_b0kkn")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_plaij"]
atlas = ExtResource("2_b0kkn")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ib8tg"]
atlas = ExtResource("2_b0kkn")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcwxb"]
atlas = ExtResource("2_b0kkn")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2i2q"]
atlas = ExtResource("2_b0kkn")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdqif"]
atlas = ExtResource("2_b0kkn")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_egchw"]
atlas = ExtResource("2_b0kkn")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykqge"]
atlas = ExtResource("2_b0kkn")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sn2x3"]
atlas = ExtResource("2_b0kkn")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y10x8"]
atlas = ExtResource("2_b0kkn")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1sc42"]
atlas = ExtResource("2_b0kkn")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t50q"]
atlas = ExtResource("2_b0kkn")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qcl2"]
atlas = ExtResource("2_b0kkn")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1w6s4"]
atlas = ExtResource("2_b0kkn")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yb7tu"]
atlas = ExtResource("2_b0kkn")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b338v"]
atlas = ExtResource("2_b0kkn")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_i623q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4p34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfe5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qly61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsoyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nm46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i623q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef06p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjdhl")
}],
"loop": false,
"name": &"change_world",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x08pd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dchgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdgjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0i8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0i614")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rie4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp3pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgp7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n8aq")
}],
"loop": true,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_28s6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cicqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj0ki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fruft")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_slxql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evlff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7db53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_plaij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ib8tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcwxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2i2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdqif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egchw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykqge")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sn2x3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y10x8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1sc42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t50q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qcl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1w6s4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yb7tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b338v")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6nm46"]
size = Vector2(12, 15)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_merdl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 2
shape = SubResource("CapsuleShape2D_u3f3p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(1, -3)
sprite_frames = SubResource("SpriteFrames_i623q")
animation = &"change_world"
frame = 7
frame_progress = 1.0

[node name="Hitbox" type="Area2D" parent="."]
z_index = 10
collision_layer = 2
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_6nm46")
debug_color = Color(0.95774, 0, 0.53094, 0.42)

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
